--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1996,17 +1996,20 @@ input, select, textarea {
 		.features section {
 			padding: 3.5em 3em 1em 7em ;
 			width: 50%;
-			border-top: solid 1px rgba(255, 255, 255, 0.15);
+			
 			position: relative;
 		}
 
-			.features section:nth-child(-n + 2) {
-				border-top-width: 0;
-			}
+		.features section img {
+			margin-left: -2em;
+			margin-bottom: 2em;
+			float:left;
+		}
 
-			.features section:nth-child(2n) {
-				border-left: solid 1px rgba(255, 255, 255, 0.15);
-			}
+		.features section h2 {
+			margin-top: 1em;
+			margin-left: 5em;
+		}
 
 			.features section .icon {
 				-moz-transition: opacity 0.5s ease, -moz-transform 0.5s ease;
@@ -2530,6 +2533,7 @@ input, select, textarea {
 			line-height: 2.5em;
 			margin: 0 0 1.3em 0;
 		}
+
 
 			.icon.major:before {
 				font-size: 1.25em;
@@ -3923,3 +3927,18 @@ input, select, textarea {
 			}
 
 		}
+
+		.thumbnail { 
+			display:block; 
+			z-index:999; 
+			cursor: pointer; 
+			-webkit-transition-property: all; 
+			-webkit-transition-duration: 0.3s; 
+			-webkit-transition-timing-function: ease; 
+			} 
+			
+			/*change the number below to scale to the appropriate size*/ 
+			.thumbnail:hover { 
+			transform: scale(1.2); 
+			
+			}
