--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3932,9 +3932,12 @@ input, select, textarea {
 			display:block; 
 			z-index:999; 
 			cursor: pointer; 
-			-webkit-transition-property: all; 
+			-webkit-transition: all; 
+			transition: all;
 			-webkit-transition-duration: 0.3s; 
+			transition-duration: 0.3s;
 			-webkit-transition-timing-function: ease; 
+			transition-timing-function: ease;
 			} 
 			
 			/*change the number below to scale to the appropriate size*/ 
