--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2003,15 +2003,14 @@ input, select, textarea {
 		.features section img {
 			margin-left: -2em;
 			margin-bottom: 2em;
-			float:left;
 		}
 
 		.features section h2 {
-			margin-top: 1em;
+			margin-top: -4em;
 			margin-left: 5em;
 		}
 
-			.features section .icon {
+			.features section .thumbnail {
 				-moz-transition: opacity 0.5s ease, -moz-transform 0.5s ease;
 				-webkit-transition: opacity 0.5s ease, -webkit-transform 0.5s ease;
 				-ms-transition: opacity 0.5s ease, -ms-transform 0.5s ease;
@@ -2030,70 +2029,70 @@ input, select, textarea {
 				opacity: 1;
 			}
 
-			.features section:nth-child(1) .icon {
+			.features section:nth-child(1) .thumbnail {
 				-moz-transition-delay: 0.15s;
 				-webkit-transition-delay: 0.15s;
 				-ms-transition-delay: 0.15s;
 				transition-delay: 0.15s;
 			}
 
-			.features section:nth-child(2) .icon {
+			.features section:nth-child(2) .thumbnail {
 				-moz-transition-delay: 0.3s;
 				-webkit-transition-delay: 0.3s;
 				-ms-transition-delay: 0.3s;
 				transition-delay: 0.3s;
 			}
 
-			.features section:nth-child(3) .icon {
+			.features section:nth-child(3) .thumbnail {
 				-moz-transition-delay: 0.45s;
 				-webkit-transition-delay: 0.45s;
 				-ms-transition-delay: 0.45s;
 				transition-delay: 0.45s;
 			}
 
-			.features section:nth-child(4) .icon {
+			.features section:nth-child(4) .thumbnail {
 				-moz-transition-delay: 0.6s;
 				-webkit-transition-delay: 0.6s;
 				-ms-transition-delay: 0.6s;
 				transition-delay: 0.6s;
 			}
 
-			.features section:nth-child(5) .icon {
+			.features section:nth-child(5) .thumbnail {
 				-moz-transition-delay: 0.75s;
 				-webkit-transition-delay: 0.75s;
 				-ms-transition-delay: 0.75s;
 				transition-delay: 0.75s;
 			}
 
-			.features section:nth-child(6) .icon {
+			.features section:nth-child(6) .thumbnail {
 				-moz-transition-delay: 0.9s;
 				-webkit-transition-delay: 0.9s;
 				-ms-transition-delay: 0.9s;
 				transition-delay: 0.9s;
 			}
 
-			.features section:nth-child(7) .icon {
+			.features section:nth-child(7) .thumbnail {
 				-moz-transition-delay: 1.05s;
 				-webkit-transition-delay: 1.05s;
 				-ms-transition-delay: 1.05s;
 				transition-delay: 1.05s;
 			}
 
-			.features section:nth-child(8) .icon {
+			.features section:nth-child(8) .thumbnail {
 				-moz-transition-delay: 1.2s;
 				-webkit-transition-delay: 1.2s;
 				-ms-transition-delay: 1.2s;
 				transition-delay: 1.2s;
 			}
 
-			.features section:nth-child(9) .icon {
+			.features section:nth-child(9) .thumbnail {
 				-moz-transition-delay: 1.35s;
 				-webkit-transition-delay: 1.35s;
 				-ms-transition-delay: 1.35s;
 				transition-delay: 1.35s;
 			}
 
-			.features section:nth-child(10) .icon {
+			.features section:nth-child(10) .thumbnail {
 				-moz-transition-delay: 1.5s;
 				-webkit-transition-delay: 1.5s;
 				-ms-transition-delay: 1.5s;
@@ -2202,7 +2201,7 @@ input, select, textarea {
 				padding: 2.5em 1.5em 0.1em 5.5em ;
 			}
 
-				.features section .icon {
+				.features section .thumbnail {
 					left: 1.5em;
 					top: 2em;
 				}
@@ -2215,7 +2214,7 @@ input, select, textarea {
 				padding: 2em 1.5em 0.1em 1.5em ;
 			}
 
-				.features section .icon {
+				.features section .thumbnail {
 					left: 0;
 					position: relative;
 					top: 0;
